Changed gitignore to ignore all csv and zip files

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,7 @@ sampleSubmission.csv
 test.tsv.zip
 train.tsv.zip
 kaggle/criteo-display-ad-challenge/__pycache__
-kaggle/criteo-display-ad-challenge/random_submission.zip
-kaggle/criteo-display-ad-challenge/train.zip
-kaggle/criteo-display-ad-challenge/train.csv
-kaggle/criteo-display-ad-challenge/test.zip
-kaggle/criteo-display-ad-challenge/test.csv
+kaggle/criteo-display-ad-challenge/*.zip
+kaggle/criteo-display-ad-challenge/*.csv
 kaggle/criteo-display-ad-challenge/.RData
 kaggle/criteo-display-ad-challenge/.Rhistory
-kaggle/criteo-display-ad-challenge/train_sample_1000.csv
-kaggle/criteo-display-ad-challenge/train_sample_10000.csv
-kaggle/criteo-display-ad-challenge/train_sample_100000.csv
-kaggle/criteo-display-ad-challenge/train_sample_1000000.csv
